--- a/DigitalClock/DigitalClock.vcxproj.filters
+++ b/DigitalClock/DigitalClock.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="main.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="Clock.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
